plugins {
    id 'fabric-loom' version '1.9-SNAPSHOT'
    id 'maven-publish'
}

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
    accessWidenerPath = file("src/main/resources/spectrum.accesswidener")
}

repositories {
    flatDir {
        dirs 'lib'
    }
    maven {
        name = "Terraformers"
        url = uri("https://maven.terraformersmc.com")
    }
    mavenCentral() {
        url "https://jitpack.io"
        url "https://impactdevelopment.github.io/maven/"
    }
    maven { url 'https://jitpack.io' }
}


dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation "cabaletta:baritone-api:${project.baritone_api_version}"


    modCompileOnly("com.terraformersmc:modmenu:11.0.3")

    modImplementation name: 'nether-pathfinder-1.4.1'
    modImplementation name: 'IAS-Fabric-1.21.1-9.0.2'
    modImplementation name: 'satin-2.0.0'
    modImplementation name: 'sodium-fabric-0.6.13+mc1.21.1'
    modImplementation name: 'iris-fabric-1.8.8+mc1.21.1'
    include name: 'nether-pathfinder-1.4.1'
    include name: 'IAS-Fabric-1.21.1-9.0.2'
    include name: 'satin-2.0.0'
    include name: 'sodium-fabric-0.6.13+mc1.21.1'
    include name: 'iris-fabric-1.8.8+mc1.21.1'

    implementation 'org.apiguardian:apiguardian-api:1.1.2'
    implementation name: 'annotations'

    implementation 'javazoom:jlayer:1.0.1'
    include 'javazoom:jlayer:1.0.1'
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
    options.compilerArgs << "-Xmaxerrs" << "2048"
    options.compilerArgs << "--enable-preview"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    repositories {
    }
}
task copyDeps(type: Copy) {
    from configurations.runtimeClasspath
    into 'libs'
}
